fix(deps): replace googletrans with deep-translator to resolve httpx conflicts
Switch from googletrans to deep-translator library for Google translation
API calls. This change resolves dependency conflicts with httpx and
simplifies the translation implementation by removing retry logic and
parameter handling that was previously required.

Key changes:
- Replace googletrans import with deep_translator.GoogleTranslator
- Simplify translator instantiation (source="auto", target="ko")
- Remove complex parameter passing and result validation
- Update requirements.txt with new dependency
- Update error messages and comments to reflect new library

--- a/requirements.txt
+++ b/requirements.txt
@@ -11,5 +11,5 @@ duckduckgo-search==4.1.1
 # Tavily Search API 라이브러리 (대체용)
 tavily-python>=0.5.0
 
-# 구글 번역 라이브러리
-googletrans==4.0.0-rc1
+# 구글 번역 라이브러리 (googletrans 대체 - httpx 충돌 해결)
+deep-translator>=1.11.0
